@@ -2,6 +2,7 @@
 - add deprecation for update_column, update_columns should be used instead
 - fix constraints with hide_nested_column disabled in list and embedded scaffolds which are nested too
 - fix setting a hash as includes, cannot be concat in finder
+- add option to scroll on close only if element is not visible in viewport (default now)
 
 = 3.2.7
 - restore missing update.persistent feature
